version-4/grader/error/9.err
grader/compile/9.c:1:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | include <stdio.h>
      |         ^
